
Version 1.0dev
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  Backwards incompatibilities

- The default path traverser no longer proxies objects. [malthe]
  
- Template output is now always converted to unicode. [malthe]
  
- The ``ViewPageTemplateFile`` class now uses 'path' as the default
  expression type. [malthe]
  
- The compiler now expects an instantiated parser instance. [malthe]

  Features

- Source-code is now written to disk in debug mode. [malthe]
  
- Custom validation error is now raised if inserted string does not
  validate (when debug mode is enabled). [malthe]

- Added support for omitting rendering of HTML "toggle" attributes
  (option's ``selected`` and input's ``checked``) within dynamic
  attribute assignment.  If the value of the expression in the
  assignment evaluates equal to boolean False, the attribute will not
  be rendered.  If the value of the expression in the assignment
  evaluates equal to boolean True, the attribute will be rendered and
  the value of the attribute will be the value returned by the
  expression. [chrism]

- XML namespace attribute is now always printed for root tag. [malthe]
  
- Allow standard HTML entities. [malthe]
  
- Added compiler option to specify an implicit doctype; this is
  currently used by the template classes to let the loose XHTML
  doctype be the default. [malthe]
  
- Added support for translation of tag body. [malthe]

- Added security configuration for the TALES iterator (repeat
  dictionary). This is made conditional on the availability of the
  application security framework. [malthe]

- Dynamic attributes are now ordered as they appear in the
  template. [malthe]
  
- Added ``symbol_mapping`` attribute to code streams such that
  function dependencies can be registered at compile-time. [malthe]

- Allow BaseTemplate-derived classes (PageTemplate, PageTemplateFile, 
  et. al) to accept a ``doctype`` argument, which will override the