@@ -132,11 +132,13 @@ tal:condition
   ... <div xmlns="http://www.w3.org/1999/xhtml"
   ...      xmlns:tal="http://xml.zope.org/namespaces/tal">
   ...   <tal:example replace="'Hello World!'" />
+  ...   <tal:example tal:replace="'Hello World!'" />
   ...   <tal:div content="'Hello World!'" />
   ...   <tal:multiple repeat="i range(3)" replace="i" />
   ...   <tal:div condition="True">True</tal:div>
   ... </div>""")
     <div xmlns="http://www.w3.org/1999/xhtml">
+      Hello World!
       Hello World!
       Hello World!
       0
